--- a/VideoShopProject/VideoShop/Web.config
+++ b/VideoShopProject/VideoShop/Web.config
@@ -7,10 +7,10 @@
   <configSections>
     
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
-  <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 --></configSections>
+  <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 --><!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 --></configSections>
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=demolation10.ignorelist.com, 1433;Initial Catalog=MovieDatabase;User Id=simon; Password=tosselilla;" providerName="System.Data.SqlClient" />
-  </connectionStrings>
+  <add name="MovieDatabaseEntities" connectionString="metadata=res://*/Models.RentalModel.csdl|res://*/Models.RentalModel.ssdl|res://*/Models.RentalModel.msl;provider=System.Data.SqlClient;provider connection string='data source=&quot;demolation10.ignorelist.com, 1433&quot;;initial catalog=MovieDatabase;user id=simon;password=tosselilla;MultipleActiveResultSets=True;App=EntityFramework'" providerName="System.Data.EntityClient" /></connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
